bindata/external-secrets/networkpolicy_allow-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: external-secrets
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/version: "v1.2.0"
    app.kubernetes.io/managed-by: external-secrets-operator
  name: eso-sys-allow-to-dns
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - external-secrets
          - bitwarden-sdk-server
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
          podSelector:
            matchLabels:
              dns.operator.openshift.io/daemonset-dns: default
      ports:
        - protocol: TCP
          port: 5353
        - protocol: UDP
          port: 5353
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
  policyTypes:
      - Egress
